# Loopal

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  LOOPAL.md  MODULE.bazel  Makefile  README.md  deny.toml
crates/loopagent-agent/: Cargo.toml
crates/loopagent-agent/src/: config.rs  lib.rs  registry.rs  shared.rs  spawn.rs  task_store.rs  types.rs
crates/loopagent-agent/tests/: config_test.rs  registry_test.rs  router_channel_test.rs  router_observe_test.rs  router_test.rs  task_store_test.rs  tool_channel_test.rs  tool_send_message_test.rs
crates/loopagent-config/: Cargo.toml
crates/loopagent-config/src/: housekeeping.rs  lib.rs  loader.rs  locations.rs
crates/loopagent-config/tests/: loader_instructions_test.rs  loader_settings_merge_test.rs  loader_settings_test.rs  locations_test.rs  skills_loader_test.rs  skills_parser_test.rs
crates/loopagent-context/: Cargo.toml
crates/loopagent-context/src/: compaction.rs  lib.rs  pipeline.rs  system_prompt.rs  token_counter.rs
crates/loopagent-context/tests/: auto_compact_test.rs  compaction_test.rs  context_guard_edge_test.rs  context_guard_test.rs  message_size_guard_test.rs  pipeline_test.rs  price_limit_test.rs  smart_compact_test.rs  system_prompt_test.rs  token_counter_test.rs
crates/loopagent-hooks/: Cargo.toml
crates/loopagent-hooks/src/: lib.rs  registry.rs  runner.rs
crates/loopagent-hooks/tests/: registry_test.rs  runner_test.rs
crates/loopagent-kernel/: Cargo.toml
crates/loopagent-kernel/src/: kernel.rs  provider_registry.rs
crates/loopagent-kernel/tests/: kernel_anthropic_test.rs  kernel_google_test.rs  kernel_init_test.rs  kernel_openai_test.rs  kernel_provider_registry_test.rs
crates/loopagent-mcp/: Cargo.toml
crates/loopagent-mcp/src/: client.rs  lib.rs  manager.rs  tool_adapter.rs
crates/loopagent-mcp/tests/: manager_test.rs
crates/loopagent-runtime/: Cargo.toml
crates/loopagent-runtime/src/: lib.rs  mode.rs  permission.rs  session.rs  tool_pipeline.rs
crates/loopagent-runtime/tests/: frontend_unified_edge_test.rs  frontend_unified_test.rs  mode_test.rs  permission_test.rs  session_test.rs  tool_pipeline_hooks_test.rs  tool_pipeline_test.rs
crates/loopagent-storage/: Cargo.toml
crates/loopagent-storage/src/: lib.rs  messages.rs  sessions.rs
crates/loopagent-storage/tests/: messages_test.rs  sessions_test.rs  sessions_update_test.rs
crates/loopagent-tools/: Cargo.toml
crates/loopagent-tools/src/: registry.rs  truncate.rs
crates/loopagent-tools/tests/: bash_tool_test.rs  edit_tool_edge_test.rs  edit_tool_test.rs  glob_tool_edge_test.rs  glob_tool_test.rs  grep_tool_edge_test.rs  grep_tool_test.rs  ls_tool_test.rs  omission_detector_test.rs  read_tool_edge_test.rs  read_tool_test.rs  registry_test.rs  search_replace_test.rs  truncate_test.rs  web_fetch_tool_test.rs  write_basic_edge_test.rs  write_basic_test.rs  write_tool_edge_test.rs  write_tool_test.rs  write_validation_test.rs
crates/loopagent-tui/: Cargo.toml
crates/loopagent-tui/src/: command.rs  event.rs  lib.rs  render.rs  slash_handler.rs  tui_loop.rs
crates/loopagent-tui/tests/: app_event_edge_test.rs  app_event_test.rs  app_test.rs  app_tool_edge_test.rs  app_tool_test.rs  event_forwarding_test.rs  event_test.rs  line_cache_test.rs  markdown_code_test.rs  markdown_edge_test.rs  markdown_test.rs  message_lines_test.rs  styled_wrap_test.rs
crates/loopal-acp/: BUILD.bazel  Cargo.toml
crates/loopal-acp/src/: adapter.rs  adapter_events.rs  frontend.rs  handler.rs  handler_prompt.rs  handler_session.rs  jsonrpc.rs  lib.rs  translate.rs  types.rs
crates/loopal-acp/tests/: suite.rs
crates/loopal-agent/: BUILD.bazel  Cargo.toml
crates/loopal-agent-server/: BUILD.bazel  Cargo.toml
crates/loopal-agent-server/src/: agent_loop_params_factory.rs  agent_setup.rs  agent_setup_context.rs  agent_setup_helpers.rs  bg_task_bridge.rs  cron_bridge.rs  cron_bridge_tests.rs  hub_emitter.rs  hub_frontend.rs  interrupt_filter.rs  ipc_emitter.rs  ipc_frontend.rs  lib.rs  memory_adapter.rs  memory_consolidation.rs  mock_loader.rs  params.rs  prompt_post.rs  server.rs  server_info.rs  server_init.rs  session_forward.rs  session_hub.rs  session_hub_storage.rs  session_resources.rs  session_start.rs  shared_session.rs  spawn_policy.rs  task_bridge.rs  tcp_accept.rs  test_server.rs
crates/loopal-agent-server/tests/: suite.rs
crates/loopal-agent/src/: bridge.rs  config.rs  lib.rs  provider_resolver_impl.rs  registry.rs  session_resume_adapters.rs  shared.rs  spawn.rs  state_snapshot.rs  task_file_storage.rs  task_memory_storage.rs  task_patch.rs  task_session_storage.rs  task_store.rs  task_store_session.rs  types.rs
crates/loopal-agent/tests/: router_channel_test.rs  router_observe_test.rs  router_test.rs  suite.rs  tool_channel_test.rs  tool_send_message_test.rs
crates/loopal-auto-mode/: BUILD.bazel
crates/loopal-auto-mode/src/: cache.rs  circuit_breaker.rs  classifier.rs  lib.rs  llm_call.rs  prompt.rs
crates/loopal-auto-mode/tests/: suite.rs
crates/loopal-backend/: BUILD.bazel  Cargo.toml
crates/loopal-backend/src/: approved.rs  fs.rs  lib.rs  limits.rs  local.rs  net.rs  path.rs  platform.rs  search.rs  shell.rs  shell_stream.rs
crates/loopal-backend/tests/: suite.rs
crates/loopal-config/: BUILD.bazel  Cargo.toml
crates/loopal-config/src/: fetch_refiner.rs  harness.rs  hook.rs  hook_condition.rs  housekeeping.rs  layer.rs  lib.rs  loader.rs  locations.rs  mcp_json.rs  pipeline.rs  plugin.rs  resolved.rs  resolver.rs  sandbox.rs  settings.rs  telemetry.rs  validate.rs
crates/loopal-context/: Cargo.toml
crates/loopal-hooks/: BUILD.bazel  Cargo.toml
crates/loopal-kernel/: BUILD.bazel  Cargo.toml
crates/loopal-meta-hub/: BUILD.bazel
crates/loopal-prompt/: Cargo.toml
crates/loopal-provider/: Cargo.toml
crates/loopal-runtime/: BUILD.bazel  Cargo.toml
crates/loopal-scheduler/: BUILD.bazel
crates/loopal-telemetry/: BUILD.bazel
crates/loopal-test-support/: BUILD.bazel  Cargo.toml
crates/loopal-tool-api/: BUILD.bazel  Cargo.toml
crates/loopal-types/: Cargo.toml
(+1561 files in other folders)
