[package]
name = "loopagent-agent"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
loopagent-runtime = { workspace = true }
loopagent-kernel = { workspace = true }
loopagent-context = { workspace = true }
loopagent-storage = { workspace = true }
loopagent-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
