[package]
name = "loopagent-context"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
