[package]
name = "loopagent-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
loopagent-tools = { workspace = true }
loopagent-provider = { workspace = true }
loopagent-hooks = { workspace = true }
loopagent-mcp = { workspace = true }
loopagent-config = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
