[package]
name = "loopagent-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
loopagent-kernel = { workspace = true }
loopagent-context = { workspace = true }
loopagent-hooks = { workspace = true }
loopagent-tools = { workspace = true }
loopagent-storage = { workspace = true }
loopagent-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
