[package]
name = "loopagent-storage"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
loopagent-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
