[package]
name = "loopagent-tools"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
