[package]
name = "loopagent-tui"
version.workspace = true
edition.workspace = true

[dependencies]
loopagent-types = { workspace = true }
loopagent-config = { workspace = true }
loopagent-runtime = { workspace = true }
loopagent-provider = { workspace = true }
loopagent-session = { workspace = true }
loopagent-agent = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
unicode-width = { workspace = true }
textwrap = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
two-face = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
