[package]
name = "loopal-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
loopal-error = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-protocol = { workspace = true }
loopal-message = { workspace = true }
loopal-config = { workspace = true }
loopal-kernel = { workspace = true }
loopal-runtime = { workspace = true }
loopal-context = { workspace = true }
loopal-agent = { workspace = true }
loopal-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
