[package]
name = "loopal-agent"
version.workspace = true
edition.workspace = true

[dependencies]
loopal-types = { workspace = true }
loopal-runtime = { workspace = true }
loopal-kernel = { workspace = true }
loopal-context = { workspace = true }
loopal-storage = { workspace = true }
loopal-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
