load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-auto-mode",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/loopal-error",
        "//crates/loopal-message",
        "//crates/loopal-provider-api",
        "//crates/loopal-tool-api",
        "@crates//:futures",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "suite",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    deps = [
        ":loopal-auto-mode",
        "//crates/loopal-error",
        "//crates/loopal-provider-api",
        "//crates/loopal-tool-api",
        "@crates//:futures",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
    proc_macro_deps = ["@crates//:async-trait"],
)
