[package]
name = "loopal-config"
version.workspace = true
edition.workspace = true

[dependencies]
loopal-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
