load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-hooks",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/loopal-config",
        "//crates/loopal-error",
        "//crates/loopal-message",
        "//crates/loopal-protocol",
        "//crates/loopal-provider-api",
        "@crates//:futures",
        "@crates//:reqwest",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

rust_test(
    name = "loopal-hooks_test",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    deps = [
        ":loopal-hooks",
        "//crates/loopal-config",
        "//crates/loopal-error",
        "//crates/loopal-kernel",
        "//crates/loopal-provider-api",
        "//crates/loopal-test-support",
        "@crates//:futures",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)
