[package]
name = "loopal-prompt"
version.workspace = true
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
