[package]
name = "loopal-provider"
version.workspace = true
edition.workspace = true

[dependencies]
loopal-types = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
loopal-types = { workspace = true }
