[package]
name = "loopal-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
loopal-types = { workspace = true }
loopal-kernel = { workspace = true }
loopal-config = { workspace = true }
loopal-context = { workspace = true }
loopal-hooks = { workspace = true }
loopal-storage = { workspace = true }
loopal-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
