load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-scheduler",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:chrono",
        "@crates//:cron",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:tokio",
        "@crates//:tokio-util",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "suite",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    deps = [
        ":loopal-scheduler",
        "@crates//:chrono",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)
