load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-scheduler",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    proc_macro_deps = ["@crates//:async-trait"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:chrono",
        "@crates//:cron",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-util",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "suite",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    proc_macro_deps = ["@crates//:async-trait"],
    deps = [
        ":loopal-scheduler",
        "@crates//:chrono",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)
