load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "loopal-tool-api",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/loopal-error",
        "//crates/loopal-protocol",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
    ],
    proc_macro_deps = ["@crates//:async-trait"],
)

rust_test(
    name = "loopal-tool-api_test",
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/suite.rs",
    edition = "2024",
    deps = [
        ":loopal-tool-api",
    ],
)
